Fixed additional scrollbar in div also fixed white bars at the bottom of the site. Added the contact section with form inputs.

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,15 @@
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
   box-sizing: border-box;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
@@ -15,7 +17,6 @@ body, html {
   text-align: center;
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
 }
 
 .homeSection {
@@ -39,11 +40,13 @@ body, html {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  overflow: hidden;
 }
 
 .rightContent {
   display: flex;
   justify-content: flex-end;
+  position: static;
 }
 
 .profilePic {
@@ -51,7 +54,10 @@ body, html {
   height: 600px;
 }
 
-.skillsSection, .projectsSection, .aboutMeSection, .contactSection {
+.skillsSection,
+.projectsSection,
+.aboutMeSection,
+.contactSection {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -65,12 +71,13 @@ body, html {
   height: 100vh;
 }
 
-.projectsSection, .aboutMeSection {
+.projectsSection,
+.aboutMeSection {
   height: 100vh;
 }
 
 .contactSection {
-  height: 600px;
+  height: 660px;
 }
 
 .sectionHeader {
@@ -113,6 +120,9 @@ body, html {
     margin-top: -80px;
     margin-bottom: 20px;
     justify-content: center;
+    align-content: start;
+    flex-wrap: wrap;
+    flex-direction: row;
   }
 
   .profilePic {
@@ -120,7 +130,10 @@ body, html {
     height: auto;
   }
 
-  .skillsSection, .projectsSection, .aboutMeSection, .contactSection {
+  .skillsSection,
+  .projectsSection,
+  .aboutMeSection,
+  .contactSection {
     height: auto;
     padding: 20px;
     width: 100%;
@@ -150,7 +163,11 @@ body, html {
 
   .rightContent {
     margin-top: 0;
-    justify-content: center;
+    justify-content: space-around;
+    text-align: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-bottom: 360px;
   }
 
   .profilePic {
@@ -164,7 +181,10 @@ body, html {
     top: 10px;
   }
 
-  .skillsSection, .projectsSection, .aboutMeSection, .contactSection {
+  .skillsSection,
+  .projectsSection,
+  .aboutMeSection,
+  .contactSection {
     min-height: 100vh;
     height: auto;
     padding: 20px;
@@ -189,7 +209,8 @@ body, html {
     overflow: hidden;
   }
 
-  .leftContent, .rightContent {
+  .leftContent,
+  .rightContent {
     width: 45%;
     margin-top: 0;
   }
@@ -199,7 +220,10 @@ body, html {
     height: auto;
   }
 
-  .skillsSection, .projectsSection, .aboutMeSection, .contactSection {
+  .skillsSection,
+  .projectsSection,
+  .aboutMeSection,
+  .contactSection {
     height: auto;
     width: 100%;
     padding: 20px;
