--- a/src/styles/TypeWriter.css
+++ b/src/styles/TypeWriter.css
@@ -1,180 +1,181 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:wght@400,500,800&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Montserrat:wght@400,500,800&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Montserrat', sans-serif;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
+  box-sizing: border-box;
+  position: static;
 }
 
 body {
-    min-height: 100vh;
-    place-items: center;
+  min-height: 100vh;
+  place-items: center;
 }
 
 .wrapper {
-    width: 50vw;
-    color: white;
-    font-size: 50px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    white-space: nowrap;
+  width: 50vw;
+  color: white;
+  font-size: 50px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  white-space: nowrap;
 }
 
 .bigStaticText {
-    font-size: 60px;
-    color: white;
-    font-weight: 700;
+  font-size: 60px;
+  color: white;
+  font-weight: 700;
 }
 
 .smallThicStaticText {
-    font-size: 30px;
-    color: white;
-    font-weight: 700;
+  font-size: 30px;
+  color: white;
+  font-weight: 700;
 }
 
 .staticText {
-    font-size: 30px;
-    color: white;
-    margin-right: 10px;
+  font-size: 30px;
+  color: white;
+  margin-right: 10px;
 }
 
 .multiText {
-    font-size: 25px;
-    font-weight: 800;
-    color: #03ff98;
-    display: inline;
+  font-size: 25px;
+  font-weight: 800;
+  color: #03ff98;
+  display: inline;
 }
 
 .typingWrapper {
-    display: flex;
-    align-items: baseline;
-    white-space: nowrap;
+  display: flex;
+  align-items: baseline;
+  white-space: nowrap;
 }
 
 .typed-cursor {
-    font-size: 25px;
-    vertical-align: bottom;
+  font-size: 25px;
+  vertical-align: bottom;
 }
 
 .buttons {
-    position: relative;
-    display: inline-block;
-    margin-top: 20px;
-    margin-right: 15px;
-    padding: 15px 30px;
-    text-align: center;
-    font-size: 16px;
-    letter-spacing: 1px;
-    text-decoration: none;
-    color: #03ff98;
-    background: transparent;
-    cursor: pointer;
-    transition: ease-out 0.5s;
-    border: 2px solid #03ff98;
-    border-radius: 10px;
-    box-shadow: inset 0 0 0 0 #03ff98;
+  position: relative;
+  display: inline-block;
+  margin-top: 20px;
+  margin-right: 15px;
+  padding: 15px 30px;
+  text-align: center;
+  font-size: 16px;
+  letter-spacing: 1px;
+  text-decoration: none;
+  color: #03ff98;
+  background: transparent;
+  cursor: pointer;
+  transition: ease-out 0.5s;
+  border: 2px solid #03ff98;
+  border-radius: 10px;
+  box-shadow: inset 0 0 0 0 #03ff98;
 }
 
 .buttons:hover {
-    color: black;
-    box-shadow: inset 0 -100px 0 0 #03ff98;
+  color: black;
+  box-shadow: inset 0 -100px 0 0 #03ff98;
 }
 
 .buttons:active {
-    transform: scale(0.9);
+  transform: scale(0.9);
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2) {
-    .multiText {
-        font-size: 45px;
-    }
+  .multiText {
+    font-size: 45px;
+  }
 
-    .wrapper {
-        width: 800px;
-        color: white;
-        font-size: 40px;
-        height: 2em;
-    }
+  .wrapper {
+    width: 800px;
+    color: white;
+    font-size: 40px;
+    height: 2em;
+  }
 }
 
 @media only screen and (max-width: 768px) {
-    .wrapper {
-        width: 90vw;
-        align-items: center;
-        text-align: center;
-        font-size: 40px;
-    }
+  .wrapper {
+    width: 90vw;
+    align-items: center;
+    text-align: center;
+    font-size: 40px;
+  }
 
-    .bigStaticText {
-        font-size: 40px;
-    }
+  .bigStaticText {
+    font-size: 40px;
+  }
 
-    .smallThicStaticText,
-    .staticText {
-        font-size: 25px;
-    }
+  .smallThicStaticText,
+  .staticText {
+    font-size: 25px;
+  }
 
-    .multiText {
-        font-size: 20px;
-    }
+  .multiText {
+    font-size: 20px;
+  }
 
-    .typingWrapper {
-        justify-content: center;
-        flex-wrap: nowrap;
-    }
+  .typingWrapper {
+    justify-content: center;
+    flex-wrap: nowrap;
+  }
 
-    .typed-cursor {
-        font-size: 20px;
-    }
+  .typed-cursor {
+    font-size: 20px;
+  }
 
-    .buttons {
-        font-size: 14px;
-        padding: 10px 20px;
-        margin-top: 15px;
-        margin-right: 10px;
-    }
+  .buttons {
+    font-size: 14px;
+    padding: 10px 20px;
+    margin-top: 15px;
+    margin-right: 10px;
+  }
 }
 
 @media only screen and (max-width: 480px) {
-    .wrapper {
-        width: 90vw;
-        align-items: center;
-        text-align: center;
-        font-size: 30px;
-        margin-top: 40px;
-    }
+  .wrapper {
+    width: 90vw;
+    align-items: center;
+    text-align: center;
+    font-size: 30px;
+    margin-top: 40px;
+  }
 
-    .bigStaticText {
-        font-size: 40px;
-    }
+  .bigStaticText {
+    font-size: 40px;
+  }
 
-    .smallThicStaticText,
-    .staticText {
-        font-size: 30px;
-    }
+  .smallThicStaticText,
+  .staticText {
+    font-size: 30px;
+  }
 
-    .multiText {
-        font-size: 24px;
-    }
+  .multiText {
+    font-size: 24px;
+  }
 
-    .typingWrapper {
-        justify-content: center;
-        flex-wrap: nowrap;
-    }
+  .typingWrapper {
+    justify-content: center;
+    flex-wrap: nowrap;
+  }
 
-    .typed-cursor {
-        font-size: 18px;
-    }
+  .typed-cursor {
+    font-size: 18px;
+  }
 
-    .buttons {
-        font-size: 18px;
-        padding: 8px 16px;
-        margin-top: 10px;
-    }
+  .buttons {
+    font-size: 18px;
+    padding: 8px 16px;
+    margin-top: 10px;
+  }
 }
